# warehouse_project

./: README.md
cartographer_slam/: CMakeLists.txt  package.xml
cartographer_slam/config/: mapping.rviz  turtlebot_area.pgm  turtlebot_area.yaml  warehouse_map_real.pgm  warehouse_map_real.yaml  warehouse_map_sim.yaml.pgm  warehouse_map_sim2.yaml.pgm  warehouse_map_sim2.yaml.yaml  warehouse_map_sim3.yaml.pgm  warehouse_map_sim3.yaml.yaml
cartographer_slam/launch/: cartographer.launch.py
localization_server/: CMakeLists.txt
localization_server/config/: amcl_config.yaml  localization.rviz
localization_server/launch/: localization.launch.py
map_server/: CMakeLists.txt
map_server/config/: map.rviz  turtlebot_area.pgm  turtlebot_area.yaml  warehouse_map.yaml.pgm  warehouse_map.yaml.yaml  warehouse_map2.yaml.pgm  warehouse_map2.yaml.yaml  warehouse_map3.yaml.pgm  warehouse_map3.yaml.yaml  warehouse_map4.yaml.pgm  warehouse_map4.yaml.yaml  warehouse_map_real.pgm  warehouse_map_real.yaml  warehouse_map_sim.pgm  warehouse_map_sim.yaml  warehouse_map_sim.yaml.yaml
map_server/launch/: map_server.launch.py
nav2_apps/: CMakeLists.txt  filters.yaml  package.xml
nav2_apps/config/: filters.yaml  warehouse_map_sim_keepout.pgm  warehouse_map_sim_keepout.yaml
nav2_apps/launch/: navigation_keepout.launch.py
nav2_apps/scripts/: move_shelf_to_ship copy 1.py  move_shelf_to_ship copy 2.py  move_shelf_to_ship copy 3.py  move_shelf_to_ship copy 4.py  move_shelf_to_ship copy 5.py  move_shelf_to_ship copy 6.py  move_shelf_to_ship copy.py  (+3 more)
path_planner_server/: CMakeLists.txt
(+7 files in other folders)
